remove enable-preview